--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
 
 
     <!-- Footer Section -->
-
+    <footer class="bg-light py-3 text-center">
+        <div class="container">
+        <p class="mb-0">&copy; 2025 Tankguarding. All rights reserved.</p>
+        </div>
+    </footer>
 
 
     <!-- JS Bootstrap link  -->
