--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- CSS Link  -->
-    <style rel="stylesheet" src="./assets/css/styles.css" ref></style>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 
 </head>
 
@@ -42,6 +42,30 @@
 
     <!-- Hero Section -->
 
+    <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="container-fluid py-5">
+            <div class="row align-items-center">
+
+                <!-- LEFT SIDE: TEXT CONTENT -->
+                <div class="col-6">
+                    <h1 class="display-5 fw-bold">Tank Guarding</h1>
+                    <h3>Protect the team. Control the fight. Lead from the front.</h3>
+                    <p class="fs-4">Learn how the Tank role keeps teammates safe, controls danger, and creates a secure
+                        environment for success in team-based games.
+                    </p>
+
+                    <button id="attack-button" class="btn btn-primary btn-lg me-2" type="button">Attack!</button>
+                    <button id="defend-button" class="btn btn-secondary btn-lg" type="button">Defend!</button>
+                </div>
+                <!-- RIGHT SIDE: IMAGE -->
+                <div class="col-6 d-flex justify-content-center align-items-center">
+                    <img src="./assets/images/knight.png" id="hero-img" class="img-fluid rounded tank-hero-img"
+                        alt="Game knight character illustration">
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <!-- Key Info/Gird Section -->
 
@@ -55,10 +79,47 @@
     <!-- Footer Section -->
     <footer class="bg-light py-3 text-center">
         <div class="container">
-        <p class="mb-0">&copy; 2025 Tankguarding. All rights reserved.</p>
+            <p class="mb-0">&copy; 2025 Tankguarding. All rights reserved.</p>
         </div>
     </footer>
 
+
+
+
+    <!-- JS -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const heroImage = document.getElementById("hero-img");
+
+            const normalImage = "./assets/images/knight.png";
+            const flashImage = "./assets/images/knightwave.png"; // the image to show temporarily
+
+            // Automatically swap 1 second after page load
+            setTimeout(function () {
+                heroImage.src = flashImage;
+
+                setTimeout(function () {
+                    heroImage.src = normalImage;
+                }, 1000); // revert after 1 second
+            }, 1000); // initial delay after page load
+        });
+    </script>
+    <!-- Attack button functionality -->
+    <script>
+        const attackButton = document.getElementById("attack-button");
+        const heroImage = document.getElementById("hero-img");
+
+        const normalImage = "./assets/images/knight.png";
+        const attackImage = "./assets/images/knightattacked.png";
+
+        attackButton.addEventListener("click", function () {
+            heroImage.src = attackImage;
+
+            setTimeout(function () {
+                heroImage.src = normalImage;
+            }, 1000); // 1 second delay
+        });
+    </script>
 
     <!-- JS Bootstrap link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
