Add background image to body and info cards.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-    
+
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
         <div class="container">
@@ -70,13 +70,15 @@
         </div>
     </div>
 
+
+
     <!-- Key Info/Gird Section -->
     <!-- Tips Section -->
     <div class="container my-5">
         <div class="row align-items-center mb-4">
 
             <!-- Tip Column 1: Maintaining Aggro -->
-            <div id="tip1" class="col-8 tip-col bg-light p-4 rounded shadow position-relative"
+            <div id="tip1" class="col-8 tip-col scroll-bg rounded shadow position-relative"
                 style="z-index: 2; margin-right: -40px;">
                 <h3>Maintaining Aggro</h3>
                 <ul>
@@ -101,8 +103,9 @@
                     alt="Tank using defensive skills">
             </div>
             <!-- Tip Column 2: Using Defensives -->
-            <div id="tip2" class="col-8 tip-col bg-light p-4 rounded shadow position-relative"
+            <div id="tip2" class="col-8 tip-col scroll-bg rounded shadow position-relative"
                 style="z-index: 2; margin-left: -40px;">
+
                 <h3>Using Defensives</h3>
                 <ul>
                     <li>Use cooldowns to mitigate incoming damage.</li>
