--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tankguarding</title>
 
     <!-- CSS Bootstrap 5 Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- CSS Link  -->
     <link rel="stylesheet" href="./assets/css/styles.css">
-
+    <!-- Favicon Link -->
+    <link rel="icon" type="image/png" href="./assets/images/icon-192.png">
 </head>
 
 <body>
@@ -20,32 +21,30 @@
 
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
+    <div class="container">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="./assets/images/knighthead.png" alt="Site Logo" height="40" class="me-2">
+            Tankguarding
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="./assets/images/knighthead.png" alt="Site Logo" height="40" class="me-2">
-                Tankguarding
-            </a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#grid-info">Need to Know</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#bullet-points">Tips</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#Contact">Resources</a></li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#grid-info">Need to Know</a></li>
+                <li class="nav-item"><a class="nav-link" href="#bullet-points">Tips</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Contact">Resources</a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Hero Section -->
 
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 mb-4 bg-light rounded-3 hero-row" id="hero-section">
         <div class="container-fluid py-5">
             <div class="row align-items-center">
 
@@ -68,8 +67,13 @@
 
             </div>
         </div>
+           <!-- Decorative Overlay Image -->
+    <div class="hero-overlay-container">
+        <img src="./assets/images/decoclouds1.png" alt="Decorative overlay" class="hero-overlay-img">
+    </div>
     </div>
 
+ 
 
 
     <!-- Key Info/Gird Section -->
@@ -78,7 +82,7 @@
         <div class="row align-items-center mb-4">
 
             <!-- Tip Column 1: Maintaining Aggro -->
-            <div id="tip1" class="col-8 tip-col scroll-bg rounded shadow position-relative"
+            <div id="tip1" class="col-12 col-md-8 tip-col scroll-bg rounded  position-relative"
                 style="z-index: 2; margin-right: -40px;">
                 <h3>Maintaining Aggro</h3>
                 <ul>
@@ -89,8 +93,8 @@
             </div>
 
             <!-- Image Column 1 -->
-            <div class="col-4">
-                <img id="tip-img-1" src="./assets/images/knight.png" class="img-fluid rounded shadow"
+            <div class="col-12 col-md-4">
+                <img id="tip-img-1" src="./assets/images/knight.png" class="img-fluid rounded "
                     alt="Tank holding aggro">
             </div>
 
@@ -98,12 +102,12 @@
 
         <div class="row align-items-center mb-4">
             <!-- Image Column 2 -->
-            <div class="col-4">
-                <img id="tip-img-2" src="./assets/images/knight.png" class="img-fluid rounded shadow"
+            <div class="col-12 col-md-4">
+                <img id="tip-img-2" src="./assets/images/knight.png" class="img-fluid rounded "
                     alt="Tank using defensive skills">
             </div>
             <!-- Tip Column 2: Using Defensives -->
-            <div id="tip2" class="col-8 tip-col scroll-bg rounded shadow position-relative"
+            <div id="tip2" class="col-12 col-md-8 tip-col scroll-bg rounded  position-relative"
                 style="z-index: 2; margin-left: -40px;">
 
                 <h3>Using Defensives</h3>
