Add undeground section for bulletpoints aswell as styling.

--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
-    <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="./assets/images/knighthead.png" alt="Site Logo" height="40" class="me-2">
-            Tankguarding
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="./assets/images/knighthead.png" alt="Site Logo" height="40" class="me-2">
+                Tankguarding
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#grid-info">Need to Know</a></li>
-                <li class="nav-item"><a class="nav-link" href="#bullet-points">Tips</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Contact">Resources</a></li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#hero-section">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#n2k-section">Need to Know</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#bullet-points">Tips</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#Contact">Resources</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
     <!-- Hero Section -->
 
@@ -67,18 +67,18 @@
 
             </div>
         </div>
-           <!-- Decorative Overlay Image -->
-    <div class="hero-overlay-container">
-        <img src="./assets/images/decoclouds1.png" alt="Decorative overlay" class="hero-overlay-img">
-    </div>
+        <!-- Decorative Overlay Image -->
+        <div class="hero-overlay-container">
+            <img src="./assets/images/decoclouds1.png" alt="Decorative overlay" class="hero-overlay-img">
+        </div>
     </div>
 
- 
+
 
 
     <!-- Key Info/Gird Section -->
     <!-- Tips Section -->
-    <div class="container my-5">
+    <div class="container my-5" id="n2k-section">
         <div class="row align-items-center mb-4">
 
             <!-- Tip Column 1: Maintaining Aggro -->
@@ -123,8 +123,36 @@
         </div>
     </div>
 
-    <!-- Bullet Points Section -->
+    <!-- Decorative Overlay Image -->
+    <div class="ground-overlay-container"></div>
 
+    <!-- Bullet Points Section -->
+    <div id="underground" class="container-fluid">
+
+        <div class="row">
+            <!-- Do's -->
+            <div class="col-s-12 col-6 text-center my-5">
+                <h3>Do These</h3>
+                <ol class="list-group list-group-numbered">
+                    <li class="list-group-item list-group-item-success">Do Stay Alert to Your Team’s Health</li>
+                    <li class="list-group-item list-group-item-success">Do Step In When Someone Is Under Attack</li>
+                    <li class="list-group-item list-group-item-success">Do Communicate With Your Team</li>
+                    <li class="list-group-item list-group-item-success">Do Create a Safe Space</li>
+                </ol>
+            </div>
+            <!-- Dons -->
+            <div class="col-s-12 col-6 text-center my-5">
+                <h3>Don't Do These</h3>
+                <ol class="list-group list-group-numbered">
+
+                    <li class="list-group-item list-group-item-danger">Don’t Ignore the Warning Signs</li>
+                    <li class="list-group-item list-group-item-danger">Don’t Handle Serious Issues Alone</li>
+                    <li class="list-group-item list-group-item-danger">Don’t Blame the Person at Risk</li>
+                    <li class="list-group-item list-group-item-danger">Don’t Share Private Information With Friends</li>
+                </ol>
+            </div>
+        </div>
+    </div>
 
     <!-- Contact Section -->
 
