--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tankguarding</title>
 
+    <!-- Google Fonts link goes here -->
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+
+
     <!-- CSS Bootstrap 5 Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -46,26 +50,24 @@
 
     <div class="p-5 mb-4 bg-light rounded-3 hero-row" id="hero-section">
         <div class="container-fluid py-5">
-            <div class="row align-items-center">
-
+            <div class="row align-items-center hero-row">
                 <!-- LEFT SIDE: TEXT CONTENT -->
-                <div class="col-6">
+                <div id="hero-text-side" class="col-6">
                     <h1 class="display-5 fw-bold">Tank Guarding</h1>
-                    <h3>Protect the team. Control the fight. Lead from the front.</h3>
+                    <h2 class="display-6">Protect the team. Control the fight. Lead from the front.</h2>
                     <p class="fs-4">Learn how the Tank role keeps teammates safe, controls danger, and creates a secure
-                        environment for success in team-based games.
-                    </p>
-
-                    <button id="attack-button" class="btn btn-primary btn-lg me-2" type="button">Attack!</button>
-                    <button id="defend-button" class="btn btn-secondary btn-lg" type="button">Defend!</button>
+                        environment for success in team-based games.</p>
+                    <button id="attack-button" class="btn btn-danger btn-lg me-2" type="button">Attack!</button>
+                    <button id="defend-button" class="btn btn-primary btn-lg" type="button">Defend!</button>
                 </div>
+
                 <!-- RIGHT SIDE: IMAGE -->
                 <div class="col-6 d-flex justify-content-center align-items-center">
                     <img src="./assets/images/knight.png" id="hero-img" class="img-fluid rounded tank-hero-img"
                         alt="Game knight character illustration">
                 </div>
-
             </div>
+
         </div>
         <!-- Decorative Overlay Image -->
         <div class="hero-overlay-container">
@@ -103,11 +105,11 @@
         <div class="row align-items-center mb-4">
             <!-- Image Column 2 -->
             <div class="col-12 col-md-4">
-                <img id="tip-img-2" src="./assets/images/knight.png" class="img-fluid rounded "
+                <img id="tip-img-2" src="./assets/images/knight1.png" class="img-fluid rounded "
                     alt="Tank using defensive skills">
             </div>
             <!-- Tip Column 2: Using Defensives -->
-            <div id="tip2" class="col-12 col-md-8 tip-col scroll-bg rounded  position-relative"
+            <div id="tip2" class="col-12 col-md-8 tip-col scroll-bg rounded  position-relative scroll-bg2"
                 style="z-index: 2; margin-left: -40px;">
 
                 <h3>Using Defensives</h3>
@@ -131,7 +133,7 @@
 
         <div class="row">
             <!-- Do's -->
-            <div class="col-s-12 col-6 text-center my-5">
+            <div class="col-sm-12 col-md-6 text-center my-5">
                 <h3>Do These</h3>
                 <ol class="list-group list-group-numbered">
                     <li class="list-group-item list-group-item-success">Do Stay Alert to Your Team’s Health</li>
@@ -141,7 +143,7 @@
                 </ol>
             </div>
             <!-- Dons -->
-            <div class="col-s-12 col-6 text-center my-5">
+            <div class="col-sm-12 col-md-6 text-center my-5">
                 <h3>Don't Do These</h3>
                 <ol class="list-group list-group-numbered">
 
@@ -158,7 +160,7 @@
 
 
     <!-- Footer Section -->
-    <footer class="bg-light py-3 text-center">
+    <footer id="footerfooter" class=" py-3 text-center">
         <div class="container">
             <p class="mb-0">&copy; 2025 Tankguarding. All rights reserved.</p>
         </div>
