--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- CSS Link  -->
     <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- Favicon Link -->
-    <link rel="icon" type="image/png" href="./assets/images/icon-192.png">
+    <link rel="icon" type="image/png" href="./assets/images/icon-192.avif">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-custom">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="./assets/images/knighthead.png" alt="Site Logo" height="40" class="me-2">
+                <img src="./assets/images/knighthead.avif" alt="Site Logo" height="40" class="me-2">
                 Tankguarding
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -37,10 +37,10 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#hero-section">Home</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="#hero-section">Home</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="#n2k-section">Need to Know</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#bullet-points">Tips</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#Contact">Resources</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#underground">Tips</a></li>
+                    
                 </ul>
             </div>
         </div>
@@ -63,7 +63,7 @@
 
                 <!-- RIGHT SIDE: IMAGE -->
                 <div class="col-6 d-flex justify-content-center align-items-center">
-                    <img src="./assets/images/knight.png" id="hero-img" class="img-fluid rounded tank-hero-img"
+                    <img src="./assets/images/knight.avif" id="hero-img" class="img-fluid rounded tank-hero-img"
                         alt="Game knight character illustration">
                 </div>
             </div>
@@ -71,7 +71,7 @@
         </div>
         <!-- Decorative Overlay Image -->
         <div class="hero-overlay-container">
-            <img src="./assets/images/decoclouds1.png" alt="Decorative overlay" class="hero-overlay-img">
+            <img src="./assets/images/decoclouds1.avif" alt="Decorative overlay" class="hero-overlay-img">
         </div>
     </div>
 
@@ -96,7 +96,7 @@
 
             <!-- Image Column 1 -->
             <div class="col-12 col-md-4">
-                <img id="tip-img-1" src="./assets/images/knight.png" class="img-fluid rounded "
+                <img id="tip-img-1" src="./assets/images/knight.avif" class="img-fluid rounded "
                     alt="Tank holding aggro">
             </div>
 
@@ -105,7 +105,7 @@
         <div class="row align-items-center mb-4">
             <!-- Image Column 2 -->
             <div class="col-12 col-md-4">
-                <img id="tip-img-2" src="./assets/images/knight1.png" class="img-fluid rounded "
+                <img id="tip-img-2" src="./assets/images/knight1.avif" class="img-fluid rounded "
                     alt="Tank using defensive skills">
             </div>
             <!-- Tip Column 2: Using Defensives -->
