Style bulletpoints section to fit theme.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
             <!-- Dons -->
             <div class="col-sm-12 col-md-6 text-center my-5">
-                <h3>Don't Do These</h3>
+                <h3 id="dontdostyle">Don't Do These</h3>
                 <ol class="list-group list-group-numbered">
 
                     <li class="list-group-item list-group-item-danger">Don’t Ignore the Warning Signs</li>
