Style hero section for responsiveness.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <!-- <li class="nav-item"><a class="nav-link" href="#hero-section">Home</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="#n2k-section">Need to Know</a></li>
                     <li class="nav-item"><a class="nav-link" href="#underground">Tips</a></li>
-                    
+
                 </ul>
             </div>
         </div>
@@ -52,17 +52,21 @@
         <div class="container-fluid py-5">
             <div class="row align-items-center hero-row">
                 <!-- LEFT SIDE: TEXT CONTENT -->
-                <div id="hero-text-side" class="col-6">
-                    <h1 class="display-5 fw-bold">Tank Guarding</h1>
-                    <h2 class="display-6">Protect the team. Control the fight. Lead from the front.</h2>
-                    <p class="fs-4">Learn how the Tank role keeps teammates safe, controls danger, and creates a secure
+                <div id="hero-text-side" class="col-12 col-lg-6 text-center text-lg-start">
+                    <h1 class="fw-bold display-6 display-lg-5">Tank Guarding</h1>
+                    <h2 class="fs-4 fs-lg-3">Protect the team. Control the fight. Lead from the front.</h2>
+                    <p class="fs-6 fs-lg-4">Learn how the Tank role keeps teammates safe, controls danger, and creates a
+                        secure
                         environment for success in team-based games.</p>
-                    <button id="attack-button" class="btn btn-danger btn-lg me-2" type="button">Attack!</button>
-                    <button id="defend-button" class="btn btn-primary btn-lg" type="button">Defend!</button>
+                    <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-lg-start">
+                        <button id="attack-button" class="btn btn-danger btn-lg" type="button">Attack!</button>
+                        <button id="defend-button" class="btn btn-primary btn-lg" type="button">Defend!</button>
+                    </div>
                 </div>
 
                 <!-- RIGHT SIDE: IMAGE -->
-                <div class="col-6 d-flex justify-content-center align-items-center">
+                <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center mt-4 mt-lg-0">
+
                     <img src="./assets/images/knight.avif" id="hero-img" class="img-fluid rounded tank-hero-img"
                         alt="Game knight character illustration">
                 </div>
