--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <div class="row align-items-center hero-row">
                 <!-- LEFT SIDE: TEXT CONTENT -->
                 <div id="hero-text-side" class="col-12 col-lg-6 text-center text-lg-start">
-                    <h1 class="fw-bold display-6 display-lg-5">Tank Guarding</h1>
+                    <h1 class="fw-bold display-6 display-lg-5">Tank </h1>
+                    <h1 class="fw-bold display-6 display-lg-5"><s>Safe</s> Guarding</h1>
                     <h2 class="fs-4 fs-lg-3">Protect the team. Control the fight. Lead from the front.</h2>
                     <p class="fs-6 fs-lg-4">Learn how the Tank role keeps teammates safe, controls danger, and creates a
                         secure
